--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Stocks Trading Reinforcment Learning / Python</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2022</h6>
+          <p><a href="https://github.com/k1booshehri/seamcarving" target="_blank">Github Page</a></p>
+          <p><a href="https://github.com/k1booshehri/seamcarving/blob/master/Algdoc.pdf" target="_blank">Document</a></p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Seam Carving Algorithm Project/ C#</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2021</h6>
           <p>Under construction. </p>
           <hr>
         </div>
