--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
           
           <br>
-
+          <p><a href="https://k1booshehri.github.io/CV.PDF" target="_blank">Download My Curriculum vitae</a></p>
 
           <br>
         </div>
