--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+98 9106171565</p>
           <hr>
 
-          
-
-          <p><a href="/CV.pdf" target="_blank">Download My Curriculum Vitae</a></p>
 
           <br>
         </div>
@@ -51,9 +48,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Reinforcment Learning / Python</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2022</h6>
-          <p>Under construction</p>
+          <h5 class="w3-opacity"><b>About me! </b></h5>
+          <p>I'm a passionate computer scientist from Tehran,Iran.</p>
           <hr>
         </div>
 
