--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Computer Scientist</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Tehran, Iran</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>keyvan_booshehri@comp.iust.ac.ir</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+98 9106171565</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>Booshehri.k1@gmail.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+98 9212041269</p>
           <hr>
 
-
+  <p><a href="/CV.pdf" target="_blank">Download My Curriculum Vitae</a></p>
+            <p><a href="https://github.com/k1booshehri" target="_blank">My Github Link</a></p>
           <br>
         </div>
       </div><br>
@@ -49,7 +50,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         
         <div class="w3-container">
           <h5 class="w3-opacity"><b>About me! </b></h5>
-          <p>I'm a passionate computer scientist from Tehran,Iran.</p>
+          <p>I'm a passionate computer scientist from Tehran,Iran.My main research interests are Software engineering and Machine learning.I also have an ielts degree with overall score of 7.5.Feel Free to contact me.</p>
           <hr>
         </div>
 
