--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
   <p><a href="/CV.pdf" target="_blank">Download My Curriculum Vitae</a></p>
+          <p><a href="https://github.com/k1booshehri" target="_blank">My GitHub</a></p>
             
           <br>
         </div>
