--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>About me! </b></h5>
           <p>I'm a passionate computer scientist from Tehran,Iran.<br>
-            My main research interests are Software engineering and Machine learning.I also have an ielts degree with overall score of 7.5.
+            My main research interests are Software engineering and Machine learning.
+            <br>
+            I also have an ielts degree with overall score of 7.5.
             <br>
             Feel Free to contact me.</p>
           <hr>
