--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             I also have an ielts degree with overall score of 7.5.
             <br>
             Feel Free to contact me.</p>
+            <p><a href="/CV.pdf" target="_blank">Download My Curriculum Vitae</a></p>
+          <p><a href="https://github.com/k1booshehri" target="_blank">My GitHub</a></p>
           <hr>
         </div>
 
