--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         
         <div class="w3-container">
           <h5 class="w3-opacity"><b>About me! </b></h5>
-          <p>I'm a passionate computer scientist from Tehran,Iran.<br>
-            My main research interests are Software engineering and Machine learning.
+          <p>I'm a passionate computer scientist from Tehran,Iran, Graduacting from IUST(elmosana't) soon.<br>
+            My main research interests are Software engineering and Machine learning and i'm currently doing research at IUST.
             <br>
             I also have an ielts degree with overall score of 7.5.
             <br>
@@ -77,13 +77,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div>
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
