--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         
         <div class="w3-container">
           <h5 class="w3-opacity"><b>About me! </b></h5>
-          <p>I'm a passionate computer scientist from Tehran,Iran, Graduacting from IUST(elmosana't) soon.<br>
+          <p>I'm a passionate computer scientist from Tehran,Iran, graduacting from IUST(elmosana't) soon.<br>
             My main research interests are Software engineering and Machine learning and i'm currently doing research at IUST.
             <br>
             I also have an ielts degree with overall score of 7.5.
             <br>
-            Feel Free to contact me.</p>
+            Feel free to contact me.</p>
             <p><a href="/CV.pdf" target="_blank">Download My Curriculum Vitae</a></p>
           <p><a href="https://github.com/k1booshehri" target="_blank">My GitHub</a></p>
           <hr>
