--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>I'm a passionate computer scientist from Tehran,Iran, graduacting from IUST(elmosana't) soon.<br>
             My main research interests are Software engineering and Machine learning and i'm currently doing research at IUST.
             <br>
-            I also have an ielts degree with overall score of 7.5.
+            I also hold an ielts degree with overall score of 7.5.
             <br>
             Feel free to contact me.</p>
             <p><a href="/CV.pdf" target="_blank">Download My Curriculum Vitae</a></p>
